Changelog for Poi
=================


1.2.14 (unreleased)
-------------------

- Nothing changed yet.


1.2.13 (2011-05-09)
-------------------

- Catch MailHostErrors when sending email.
  [maurits]


1.2.12 (2011-05-05)
-------------------

- Do not fail when rendering a response that has a text/x-html-safe
  mimetype or where the html transform returns nothing.
  [maurits]


1.2.11 (2010-10-14)
-------------------

- Added missing msgid for 'Resolve immediately' transition.
  Updated Dutch translations.
  [maurits]


1.2.10 (2010-10-05)
-------------------

- Register the poi.response.add viewlet manager (provider) only for
  issues.  Fixes http://plone.org/products/poi/issues/241
  [maurits]


1.2.9 (2010-04-29)
------------------

- Fixed syntax error in Dutch translations.
  [maurits]


1.2.8 (2010-02-27)
------------------

- Depend on Products.AddRemoveWidget < 1.5 as I foresee that version
  might be for Plone 4 only.
  [maurits]

- When a response contains an attachment, add info about this to the
  e-mail.  Fixes http://plone.org/products/poi/issues/238
  [maurits]

- When deleting a response, do not remove it, but set it to None.
  This avoid problems when one user is editing a response and another
  user is removing it.
  [maurits]

- PoiIssue: there is no reason why contactEmail is mandatory.
  [ajung]


1.2.7 (2009-10-24)
------------------

- Some styling changes: adding a few classes and ids, and loading
  Poi.css in the issue search form.  With thanks to Lars Loewenadler
  for some hints here.
  [maurits]

- Added permission 'Poi: Edit response' and protect the edit button of
  responses with that permission.  The creator (Owner) of an issue has
  this permission when the tracker is in the open or restricted state
  and not in the protected or closed state.
  [maurits]

- Do not give Owner the Add Issue/Response permissions in a closed
  tracker.
  [maurits]


1.2.6 (2009-09-06)
------------------
