@@ -5,7 +5,9 @@ Changelog for Poi
 1.2.14 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Only do link detection in plain or intelligent text fields.  If a
+  field has html and contains an html space ``&#160`` and you have an
+  issue 160, it will start looking very ugly.  [maurits]
 
 
 1.2.13 (2011-05-09)
